--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,41 @@
     <groupId>com.liqun</groupId>
     <artifactId>Dilidili</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.5.1</version>
+    </parent>
+
+
+    <dependencies>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <version>2.5.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.26</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>2.2.0</version>
+        </dependency>
+
+    </dependencies>
+    <modules>
+        <module>dilidili-api</module>
+        <module>dilidili-service</module>
+        <module>dilidili-dao</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
