--- a/dilidili-service/src/main/resources/application.properties
+++ b/dilidili-service/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.profiles.active=test
 #mybatis
 mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.type-aliases-package=com.liqun.dilidili.dao
+
+spring.devtools.restart.enabled=true
+spring.devtools.restart.additional-paths=src/main/java
