--- a/dilidili-api/src/main/resources/application-test.properties
+++ b/dilidili-api/src/main/resources/application-test.properties
@@ -1,5 +1,5 @@
 #datasource
-spring.datasource.url=jdbc:mysql://localhost:3306/demo
+spring.datasource.url=jdbc:mysql://localhost:3306/dilidili
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
