--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,13 @@
             <version>1.2.78</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>3.18.2</version>
+        </dependency>
+
     </dependencies>
     <modules>
         <module>dilidili-api</module>
