--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,12 @@
             <version>2.2.2.RELEASE</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+            <version>2.5.1</version>
+        </dependency>
+
     </dependencies>
     <modules>
         <module>dilidili-api</module>
