--- a/dilidili-api/src/main/resources/application-test.properties
+++ b/dilidili-api/src/main/resources/application-test.properties
@@ -11,3 +11,5 @@ rocketmq.name.server.address=127.0.0.1:9876
 spring.redis.host=127.0.0.1
 spring.redis.port=6379
 spring.redis.password=
+#fastdfs
+fdfs.tracker-list=39.107.54.180:22122
