--- a/dilidili-api/src/main/resources/application-test.properties
+++ b/dilidili-api/src/main/resources/application-test.properties
@@ -13,3 +13,4 @@ spring.redis.port=6379
 spring.redis.password=
 #fastdfs
 fdfs.tracker-list=39.107.54.180:22122
+fdfs.http.storage-addr=http://39:107:54:180:8080/group1/
