--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,13 @@
             <version>1.27.2</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+            <version>2.5.1</version>
+        </dependency>
+
     </dependencies>
     <modules>
         <module>dilidili-api</module>
