ElasticSearch实现全文搜索

--- a/dilidili-api/src/main/resources/application-test.properties
+++ b/dilidili-api/src/main/resources/application-test.properties
@@ -14,3 +14,6 @@ spring.redis.password=
 #fastdfs
 fdfs.tracker-list=39.107.54.180:22122
 fdfs.http.storage-addr=http://39:107:54:180:8080/group1/
+
+#elasticsearch
+elasticsearch.url=http://127.0.0.1:9200
